<resources>
    <string name="app_name">ScreeningTest</string>
    <string name="input_name">Masukkan Nama Anda</string>
    <string name="next">Next</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_event">Pilih Event</string>
    <string name="choose_guest">Pilih Guest</string>
    <string name="events">Events</string>
    <string name="event_app">Event App</string>
    <string name="guest_name">Guest Name</string>
    <string name="guest">Guests</string>
    <string name="selamat_datang">Selamat Datang!</string>
    <string name="masukkan_nama_anda">Masukkan Nama Anda</string>
    <string name="selesai">Selesai</string>
    <string name="nutricia">#nutricia</string>
    <string name="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="mapbox_access_token">pk.eyJ1Ijoic2V0eW9iYWd1czAxIiwiYSI6ImNrcDlmMDdzZTAyMG0ycWwzM2VldDkxbDAifQ.Fg8fTUdbm-aaVJfxaxyMcg</string>
    <string name="start_navigation">Start Navigation</string>
    <string name="event_1">Event 1</string>
</resources>